--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -126,8 +126,10 @@ if(NOT CORE STREQUAL "frontend")
     endif()
 
     if(${CMAKE_VERSION} VERSION_LESS "3.20.0")
-        add_dependencies(VPK_${APP_NAME} ${VPK_NAME} ${CORE}.suprx-self)
+        add_dependencies(${VPK_NAME} ${CORE}.suprx)
+        add_dependencies(VPK_${APP_NAME} ${VPK_NAME})
     else()
-        add_dependencies(VPK_${APP_NAME} ${VPK_NAME}-vpk ${CORE}.suprx-self)
+        add_dependencies(${VPK_NAME}-vpk ${CORE}.suprx-self)
+        add_dependencies(VPK_${APP_NAME} ${VPK_NAME}-vpk)
     endif()
 endif()
