--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -184,7 +184,7 @@ target_link_libraries(${LIBRETRO_ELF}
     SceAudio_stub_weak
 )
 
-set_target_properties(${LIBRETRO_ELF} PROPERTIES COMPILE_FLAGS "-Wno-main -DSCE_LIBC_SIZE=0xA00000 -D__PSP2_USER__")
+set_target_properties(${LIBRETRO_ELF} PROPERTIES COMPILE_FLAGS "-Wno-main -D__PSP2_USER__")
 
 set(VITA_MAKE_FSELF_FLAGS "-a 0x2F00000000000101")
 vita_create_self(${LIBRETRO_SUPRX} ${LIBRETRO_ELF} UNSAFE CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/core.yml)
