--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -12,8 +12,7 @@ include_directories(
     ../deps/libvita2d_ext/libvita2d_ext/include
     ../deps/simpleini
     ../deps/minizip-ng
-    ../deps/7-Zip/C
-    ../cores)
+    ../deps/7-Zip/C)
 
 file(GLOB SRC
     source/*.c
@@ -48,7 +47,7 @@ if(NOT ${CMAKE_CURRENT_SOURCE_DIR}/source/language_frontend.cpp IN_LIST SRC)
     list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/source/language_frontend.cpp)
 endif()
 
-add_compile_definitions(APP_VER_STR="${APP_VER}")
+add_compile_definitions(APP_VER_STR="${APP_VER}" SCE_LIBC_SIZE=0xA00000)
 add_library(frontend OBJECT ${SRC})
 
 add_custom_target(FILE_TOUCHER COMMAND ${CMAKE_COMMAND} -E touch_nocreate ${CMAKE_CURRENT_SOURCE_DIR}/source/ui/tab_about.cpp)
