--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -63,6 +63,8 @@ elseif(CORE STREQUAL "atari800")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-atari800)
 elseif(CORE STREQUAL "dosbox_pure")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dosbox-pure)
+elseif(CORE STREQUAL "mame2000")
+    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mame2000-libretro)
 elseif(CORE STREQUAL "mame2003_plus")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mame2003-plus-libretro)
     set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
