--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -113,6 +113,9 @@ elseif(CORE STREQUAL "vice")
 elseif(CORE STREQUAL "px68k")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/px68k-libretro)
     set(CORE_MAKEFILE_NAME Makefile.libretro)
+elseif(CORE STREQUAL "parallel_n64")
+    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/parallel-n64)
+    set(CORE_ARGS ${CORE_ARGS} WITH_DYNAREC=arm CPUFLAGS=-DARM_FIX)
 else()
     message(FATAL_ERROR "unknown core: " ${CORE})
 endif()
