--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -139,6 +139,13 @@ option(MZ_WZAES "" OFF)
 option(MZ_DECOMPRESS_ONLY "" ON)
 option(MZ_FETCH_LIBS "" ON)
 option(MZ_FORCE_FETCH_LIBS "" ON)
+
+option(ZLIB_COMPAT "" ON)
+option(ZLIB_ENABLE_TESTS "" OFF)
+option(ZLIBNG_ENABLE_TESTS "" OFF)
+option(WITH_GZFILEOP "" OFF)
+option(WITH_GTEST "" OFF)
+option(ZLIBNG_ENABLE_TESTS "" OFF)
 add_subdirectory(minizip-ng)
 
 # lz4
