--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -113,6 +113,10 @@ elseif(CORE STREQUAL "vice")
 elseif(CORE STREQUAL "px68k")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/px68k-libretro)
     set(CORE_MAKEFILE_NAME Makefile.libretro)
+elseif(CORE STREQUAL "mednafen_lynx")
+    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/beetle-lynx-libretro)
+elseif(CORE STREQUAL handy)
+    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-handy)
 else()
     message(FATAL_ERROR "unknown core: " ${CORE})
 endif()
