--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -115,8 +115,12 @@ elseif(CORE STREQUAL "px68k")
     set(CORE_MAKEFILE_NAME Makefile.libretro)
 elseif(CORE STREQUAL "mednafen_lynx")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/beetle-lynx-libretro)
-elseif(CORE STREQUAL handy)
+elseif(CORE STREQUAL "handy")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-handy)
+elseif(CORE STREQUAL "cap32")
+    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-cap32)
+elseif(CORE STREQUAL "crocods")
+    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-crocods)
 else()
     message(FATAL_ERROR "unknown core: " ${CORE})
 endif()
