remove zlib in crocods

--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -121,6 +121,7 @@ elseif(CORE STREQUAL "cap32")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-cap32)
 elseif(CORE STREQUAL "crocods")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-crocods)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
 else()
     message(FATAL_ERROR "unknown core: " ${CORE})
 endif()
