--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -61,6 +61,7 @@ elseif(CORE STREQUAL "prosystem")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/prosystem-libretro)
 elseif(CORE STREQUAL "atari800")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-atari800)
+    set(CORE_ARGS ${CORE_ARGS} SYSTEM_ZLIB=1)
 elseif(CORE STREQUAL "dosbox_pure")
     set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dosbox-pure)
 elseif(CORE STREQUAL "mame2000")
