--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -85,9 +85,14 @@ target_link_libraries(
     FLAC
     ogg
     jsoncpp
-    curl
-    ssl
-    crypto
+
+    # curl
+    # ssl
+    # crypto
+    ${CMAKE_CURRENT_SOURCE_DIR}/../deps/tiny-curl/libcurl.a
+    ${CMAKE_CURRENT_SOURCE_DIR}/../deps/tiny-cur/libssl.a
+    ${CMAKE_CURRENT_SOURCE_DIR}/../deps/tiny-cur/libcrypto.a
+
     ScePvf_stub
     ScePgf_stub
     SceDisplay_stub
