--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -153,3 +153,11 @@ set(LZ4_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lz4/lib)
 set(LZ4_SRC ${LZ4_PATH}/lz4.c ${LZ4_PATH}/lz4hc.c)
 add_library(lz4 ${LZ4_SRC})
 target_include_directories(lz4 PRIVATE ${LZ4_PATH})
+
+# tiny-curl + openssl
+# ----------------------
+set(LIB_TINY_CURL
+    ${CMAKE_CURRENT_SOURCE_DIR}/tiny-curl/libcurl.a
+    ${CMAKE_CURRENT_SOURCE_DIR}/tiny-curl/libssl.a
+    ${CMAKE_CURRENT_SOURCE_DIR}/tiny-curl/libcrypto.a
+    CACHE INTERNAL "LIB_TINY_CURL")
